pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidGlobRead2.pkl
res = read*(".../foo/bar.txt")
